GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/Trade_Contracts_Company__c.object-meta.xml
<CustomObject>
    <label>Trade Contracts Company</label>
    <nameField>
        <label>Trading Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trade Contracts Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>