GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/ABTA__c.field-meta.xml
<CustomField>
    <fullName>ABTA__c</fullName>
    <label>ABTA</label>
    <length>10</length>
    <type>Text</type>
</CustomField>