GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Account_Needs_a_Temp_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Needs_a_Temp_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Needs a Temp Number?</label>
    <type>Checkbox</type>
</CustomField>