GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>