GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct &amp; Other</fullName>
            </value>
            <value>
                <fullName>Online Tour Operator / OTA</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Groups / Tours / Niche</fullName>
            </value>
            <value>
                <fullName>Inbounders / DMC</fullName>
            </value>
            <value>
                <fullName>Reward Redemption</fullName>
            </value>
            <value>
                <fullName>TMC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>