GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Address_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Address_Formatted__c</fullName>
    <formula>Address_Line_1__c + &quot; &quot; + Address_Line_2__c + &quot; &quot; + Address_Line_3__c + &quot; &quot; +  City__c  + &quot; &quot; + Text(County_State__c) + &quot; &quot; +  Post_Code_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address (Formatted)</label>
    <type>Text</type>
</CustomField>