GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Address_Line_1_Reg__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1_Reg__c</fullName>
    <label>Registered Address Line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>