GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Amount_of_Users__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Users__c</fullName>
    <description>Amount of Users using the new portal/PAO connection</description>
    <label>Amount of Users</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>