GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Annual_Review__c.field-meta.xml
<CustomField>
    <fullName>Annual_Review__c</fullName>
    <label>Annual Review</label>
    <type>Date</type>
</CustomField>