GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Annual_Review_Due_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Annual_Review_Due_This_Month__c</fullName>
    <formula>LEFT(TEXT(Annual_Review__c),7) = LEFT(TEXT(TODAY()),7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Review Due This Month</label>
    <type>Checkbox</type>
</CustomField>