GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Auto_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Account_Number__c</fullName>
    <description>Used for Temp Account number creation in process builder</description>
    <displayFormat>{0000}</displayFormat>
    <label>Account Number (4)</label>
    <type>AutoNumber</type>
</CustomField>