GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Auto_Number_3__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number_3__c</fullName>
    <description>Used for Account number creation TO, DC, LA, GDS and GDS &amp; BAF</description>
    <displayFormat>{000}</displayFormat>
    <label>Auto Number (3)</label>
    <type>AutoNumber</type>
</CustomField>