GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Booking_Channel__c.field-meta.xml
<CustomField>
    <fullName>Booking_Channel__c</fullName>
    <label>Method of Booking</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amadeus</fullName>
            </value>
            <value>
                <fullName>Sabre</fullName>
            </value>
            <value>
                <fullName>Galileo</fullName>
            </value>
            <value>
                <fullName>Voyager</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Amadeus Rail</fullName>
            </value>
            <value>
                <fullName>Contact Centre</fullName>
            </value>
            <value>
                <fullName>Eurostar For Business Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>