GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/City_Reg__c.field-meta.xml
<CustomField>
    <fullName>City_Reg__c</fullName>
    <label>Registered City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>