GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Commercial_Entity__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Will link the TC to the Commercial Entity</description>
    <inlineHelpText>Please link the Commercial Entity through this field</inlineHelpText>
    <label>Commercial Entity</label>
    <referenceTo>Trade_Sales_Account__c</referenceTo>
    <relationshipLabel>Trade Contracts Company</relationshipLabel>
    <relationshipName>Trade_Contracts_Companies</relationshipName>
    <type>Lookup</type>
</CustomField>