GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Number__c</fullName>
    <label>Company Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>