GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Concessions_Approved_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Concessions_Approved_Y_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concessions Approved Y/N</label>
    <type>Checkbox</type>
</CustomField>