GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Concessions_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Concessions_Due_Date__c</fullName>
    <label>Concessions Due Date</label>
    <type>Date</type>
</CustomField>