GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Corporate</fullName>
            </value>
            <value>
                <fullName>GDS Only</fullName>
            </value>
            <value>
                <fullName>Leisure Agent</fullName>
            </value>
            <value>
                <fullName>Tour Operator</fullName>
            </value>
            <value>
                <fullName>Internal BAF</fullName>
            </value>
            <value>
                <fullName>GDS &amp; BAF</fullName>
            </value>
            <value>
                <fullName>Independent Organisation</fullName>
            </value>
            <value>
                <fullName>Seat Only</fullName>
            </value>
            <value>
                <fullName>Reward &amp; Redemption</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>