GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Country_Reg__c.field-meta.xml
<CustomField>
    <fullName>Country_Reg__c</fullName>
    <label>Registered Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>