GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/County_State__c.field-meta.xml
<CustomField>
    <fullName>County_State__c</fullName>
    <label>County / State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bedfordshire</fullName>
            </value>
            <value>
                <fullName>Berkshire</fullName>
            </value>
            <value>
                <fullName>Bristol</fullName>
            </value>
            <value>
                <fullName>Buckinghamshire</fullName>
            </value>
            <value>
                <fullName>Cambridgeshire</fullName>
            </value>
            <value>
                <fullName>Cheshire</fullName>
            </value>
            <value>
                <fullName>City of London</fullName>
            </value>
            <value>
                <fullName>Cornwall</fullName>
            </value>
            <value>
                <fullName>Cumbria</fullName>
            </value>
            <value>
                <fullName>Derbyshire</fullName>
            </value>
            <value>
                <fullName>Devon</fullName>
            </value>
            <value>
                <fullName>Dorset</fullName>
            </value>
            <value>
                <fullName>Durham</fullName>
            </value>
            <value>
                <fullName>East Riding of Yorkshire</fullName>
            </value>
            <value>
                <fullName>East Sussex</fullName>
            </value>
            <value>
                <fullName>Essex</fullName>
            </value>
            <value>
                <fullName>Gloucestershire</fullName>
            </value>
            <value>
                <fullName>Greater London</fullName>
            </value>
            <value>
                <fullName>Greater Manchester</fullName>
            </value>
            <value>
                <fullName>Hampshire</fullName>
            </value>
            <value>
                <fullName>Herefordshire</fullName>
            </value>
            <value>
                <fullName>Hertfordshire</fullName>
            </value>
            <value>
                <fullName>Isle of Wight</fullName>
            </value>
            <value>
                <fullName>Kent</fullName>
            </value>
            <value>
                <fullName>Lancashire</fullName>
            </value>
            <value>
                <fullName>Leicestershire</fullName>
            </value>
            <value>
                <fullName>Lincolnshire</fullName>
            </value>
            <value>
                <fullName>Merseyside</fullName>
            </value>
            <value>
                <fullName>Middlesex</fullName>
            </value>
            <value>
                <fullName>Norfolk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>