GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/DocuSign_Status__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocuSign Status</label>
    <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
    <relationshipLabel>Trade Contracts Companies</relationshipLabel>
    <relationshipName>Trade_Contracts_Companies</relationshipName>
    <type>Lookup</type>
</CustomField>