GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/EMIS_Subchannel__c.field-meta.xml
<CustomField>
    <fullName>EMIS_Subchannel__c</fullName>
    <label>NEMIS Subchannel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TMC</fullName>
            </value>
            <value>
                <fullName>Leisure Agent</fullName>
            </value>
            <value>
                <fullName>Tour Operator</fullName>
            </value>
            <value>
                <fullName>Inbd Tourop</fullName>
            </value>
            <value>
                <fullName>Call Centre</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>