GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Fare_Range__c.field-meta.xml
<CustomField>
    <fullName>Fare_Range__c</fullName>
    <label>Fare Range</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>RIT</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>