GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Interested_in_Agent_Portal__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Agent_Portal__c</fullName>
    <label>Interested in Agent Portal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>