GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Managed__c.field-meta.xml
<CustomField>
    <fullName>Managed__c</fullName>
    <label>Managed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Managed</fullName>
            </value>
            <value>
                <fullName>Unmanaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>