GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Merged_Date__c.field-meta.xml
<CustomField>
    <fullName>Merged_Date__c</fullName>
    <description>Date the account has been merged</description>
    <inlineHelpText>Date the account has been merged</inlineHelpText>
    <label>Merged Date</label>
    <type>Date</type>
</CustomField>