GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Notices_Email__c.field-meta.xml
<CustomField>
    <fullName>Notices_Email__c</fullName>
    <label>Notices Email</label>
    <type>Email</type>
</CustomField>