GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Old_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Account_Number__c</fullName>
    <label>Old Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>