GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Original_Contract_Start_ETACS__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract_Start_ETACS__c</fullName>
    <label>Original Contract Start (ETACS)</label>
    <type>Date</type>
</CustomField>