GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Post_Code_Zip_Reg__c.field-meta.xml
<CustomField>
    <fullName>Post_Code_Zip_Reg__c</fullName>
    <label>Registered Post Code / Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>