GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Registered_Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Registered_Company_Number__c</fullName>
    <label>Registered Company Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>