GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Second_Contract__c.field-meta.xml
<CustomField>
    <fullName>Second_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Contract</label>
    <referenceTo>Trade_Contracts_Company__c</referenceTo>
    <relationshipLabel>Trade Contracts Companies</relationshipLabel>
    <relationshipName>Trade_Contracts_Companies</relationshipName>
    <type>Lookup</type>
</CustomField>