GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Temp_Number__c.field-meta.xml
<CustomField>
    <fullName>Temp_Number__c</fullName>
    <displayFormat>{000}</displayFormat>
    <label>Temp Number</label>
    <type>AutoNumber</type>
</CustomField>