GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Trade_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Trade_Affiliation__c</fullName>
    <description>Free text box for any trade affiliation information</description>
    <label>Trade Affiliation</label>
    <type>TextArea</type>
</CustomField>