GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Trade_Contract_Merged__c.field-meta.xml
<CustomField>
    <fullName>Trade_Contract_Merged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to display if the current account is merged</description>
    <inlineHelpText>Please tick box if account is merged</inlineHelpText>
    <label>Trade Contract Merged</label>
    <type>Checkbox</type>
</CustomField>