GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/fields/Unique_Contract_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Unique_Contract_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unique Contract Applicable</label>
    <type>Checkbox</type>
</CustomField>