GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/validationRules/Merge_Accounts_must_have_Merge_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Merge_Accounts_must_have_Merge_Notes</fullName>
    <active>true</active>
    <description>If Merge account checkbox is True Merge notes must not be Blank</description>
    <errorConditionFormula>(Trade_Contract_Merged__c = TRUE)
&amp;&amp;
ISBLANK(Merge_Notes__c)</errorConditionFormula>
    <errorMessage>Please enter the details on the Merge of this Account in the Merge Notes Text area</errorMessage>
</ValidationRule>