GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/listViews/All_Companies.listView-meta.xml
<ListView>
    <fullName>All_Companies</fullName>
    <columns>NAME</columns>
    <columns>Status_of_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>*All Companies</label>
    <language>en_US</language>
</ListView>