GearsetPOC/force-app/main/default/objects/Trade_Contracts_Company__c/listViews/F.listView-meta.xml
<ListView>
    <fullName>F</fullName>
    <columns>NAME</columns>
    <columns>Status_of_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>F</value>
    </filters>
    <label>F</label>
    <language>en_US</language>
</ListView>